# serenade-switch-simulator

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  install_dependencies.sh
C_Serenade/: .gitignore  CMakeLists.txt  Serenade_Conservative.hpp  Serenade_Conservative_sim.cpp
C_Serenade_for_Proofs_Sake/: CMakeLists.txt  Serenade_Conservative_for_Proof.hpp  Serenade_Conservative_for_Proof_sim.cpp
C_Serenade_for_Proofs_Sake_V2/: CMakeLists.txt  Serenade_Conservative_for_Proof.hpp  Serenade_Conservative_for_Proof_sim.cpp
C_Serenade_for_Proofs_Sake_for_TON2018/: CMakeLists.txt  Serenade_Conservative_for_Proof.hpp
E_Serenade_V1/: CMakeLists.txt  E_Serenade.hpp  E_Serenade_sim.cpp
O_Serenade/: CMakeLists.txt  Serenade_Opportunistic.hpp  Serenade_Opportunistic_sim.cpp
O_Serenade_True_Emulator/: CMakeLists.txt  Serenade_OE.cpp
O_Serenade_for_Proof_Sake/: CMakeLists.txt  Serenade_Opportunistic_Proof.hpp  Serenade_Opportunistic_Proof_sim.cpp
O_Serenade_for_Proof_Sake_V2/: CMakeLists.txt  Serenade_Opportunistic_Proof.hpp  Serenade_Opportunistic_Proof_sim.cpp
Serena/: CMakeLists.txt  Serena.hpp
Serenade-Emulator/: .gitignore  CMakeLists.txt  Serena_sim.cpp
common/: CMakeLists.txt  LWSConfig.h.in  lws.hpp
data-revised/BSIT/: BSIT_128.txt  BSIT_16.txt  BSIT_32.txt  BSIT_64.txt
data-revised/Ouroboros/: n=128.txt  n=32.txt  n=64.txt
iSLIP/: .gitignore  CMakeLists.txt  iSLIP.hpp  iSLIP_sim.cpp
py/: Delay_vs_burst_size.yaml  Delay_vs_burst_size_128.yaml  Delay_vs_loads.yaml  Delay_vs_loads_128.yaml  Delay_vs_loads_patch.yaml  Delay_vs_loads_patch_128.yaml  Delay_vs_ports.yaml  Delay_vs_ports_LATEST.yaml  pySimu.py
test/: .gitignore  lws_test.cpp
